fixes following remarks on PR